@@ -30,6 +30,7 @@
 typedef struct {
       char *path;
       GHashTable *mime_types_map;
+      GHashTable *default_mime_types_map;
 } GnomeVFSMimeInfoCacheDir;
 
 typedef struct {
@@ -50,21 +51,31 @@ static void gnome_vfs_mime_info_cache_reload (GnomeVFSMimeInfoCache *cache);
 static GnomeVFSMimeInfoCache *mime_info_cache = NULL;
 
 
-static GnomeVFSMimeInfoCacheDir *
-gnome_vfs_mime_info_cache_dir_new (const char *path)
+static void
+free_mime_types_map_list (GList *list)
 {
-      GnomeVFSMimeInfoCacheDir *dir;
+      g_list_foreach (list, (GFunc) g_free, NULL);
+      g_list_free (list);
+}
+
+static void
+gnome_vfs_mime_info_cache_dir_reload_all_associations (GnomeVFSMimeInfoCacheDir *dir)
+{
       EggDesktopEntries *entries;
       GError *load_error;
       gchar *filename, **desktop_file_ids, **mime_types;
       int i;
       static gchar *allowed_start_groups[] = { "MIME Cache", NULL };
 
-      dir = g_new0 (GnomeVFSMimeInfoCacheDir, 1);
-      dir->path = g_strdup (path);
-      dir->mime_types_map = g_hash_table_new (g_str_hash, g_str_equal);
+      if (dir->mime_types_map != NULL) {
+            g_hash_table_destroy (dir->mime_types_map);
+      }
 
-      filename = g_build_filename (path, "mimeinfo.cache", NULL);
+      dir->mime_types_map = g_hash_table_new_full (g_str_hash, g_str_equal,
+                                                   (GDestroyNotify) g_free,
+                                                   (GDestroyNotify) free_mime_types_map_list);
+
+      filename = g_build_filename (dir->path, "mimeinfo.cache", NULL);
 
       load_error = NULL;
       entries = 
@@ -78,24 +89,91 @@ gnome_vfs_mime_info_cache_dir_new (const char *path)
 
       if (load_error != NULL) {
             g_error_free (load_error);
-            gnome_vfs_mime_info_cache_dir_free (dir);
-            return NULL;
+            return;
       }
 
-      mime_types = egg_desktop_entries_get_keys (entries, "MIME Cache", NULL, &load_error);
+      mime_types = egg_desktop_entries_get_keys (entries, "MIME Cache",
+                                                 NULL, &load_error);
 
       if (load_error != NULL);
 
       for (i = 0; mime_types[i] != NULL; i++) {
-            desktop_file_ids = egg_desktop_entries_get_string_list (entries, "MIME Cache",
-                                                                    mime_types[i], NULL,
+            desktop_file_ids = egg_desktop_entries_get_string_list (entries,
+                                                                    "MIME Cache",
+                                                                    mime_types[i],
+                                                                    NULL,
                                                                     &load_error);
-            gnome_vfs_mime_info_cache_dir_merge_mime_associations (dir, mime_types[i], desktop_file_ids);
+            gnome_vfs_mime_info_cache_dir_merge_mime_associations (dir,
+                                                                   mime_types[i],
+                                                                   desktop_file_ids);
 
             g_strfreev (desktop_file_ids);
       }
 
       g_strfreev (mime_types);
+}
+
+static void
+gnome_vfs_mime_info_cache_dir_reload_default_associations (GnomeVFSMimeInfoCacheDir *dir)
+{
+      EggDesktopEntries *entries;
+      GError *load_error;
+      gchar *filename, *desktop_file_id, **mime_types;
+      int i;
+      static gchar *allowed_start_groups[] = { "MIME Cache", NULL };
+
+      if (dir->default_mime_types_map != NULL) {
+            g_hash_table_destroy (dir->default_mime_types_map);
+      }
+      dir->default_mime_types_map = g_hash_table_new_full (g_str_hash, g_str_equal,
+                                                           g_free, g_free);
+
+      filename = g_build_filename (dir->path, "defaults.list", NULL);
+
+      load_error = NULL;
+      entries = 
+          egg_desktop_entries_new_from_file (allowed_start_groups,
+                                             EGG_DESKTOP_ENTRIES_GENERATE_LOOKUP_MAP |
+                                             EGG_DESKTOP_ENTRIES_DISCARD_COMMENTS |
+                                             EGG_DESKTOP_ENTRIES_DISCARD_TRANSLATIONS,
+                                             filename,
+                                             &load_error);
+      g_free (filename);
+
+      if (load_error != NULL) {
+            g_error_free (load_error);
+            return;
+      }
+
+      mime_types = egg_desktop_entries_get_keys (entries, "MIME Cache",
+                                                 NULL, &load_error);
+
+      if (load_error != NULL);
+
+      for (i = 0; mime_types[i] != NULL; i++) {
+            desktop_file_id = egg_desktop_entries_get_string (entries,
+                                                              "MIME Cache",
+                                                              mime_types[i],
+                                                              &load_error);
+            g_hash_table_replace (dir->default_mime_types_map,
+                                  g_strdup (mime_types[i]),
+                                  desktop_file_id);
+      }
+
+      g_strfreev (mime_types);
+}
+
+
+static GnomeVFSMimeInfoCacheDir *
+gnome_vfs_mime_info_cache_dir_new (const char *path)
+{
+      GnomeVFSMimeInfoCacheDir *dir;
+
+      dir = g_new0 (GnomeVFSMimeInfoCacheDir, 1);
+      dir->path = g_strdup (path);
+
+      gnome_vfs_mime_info_cache_dir_reload_all_associations (dir);
+      gnome_vfs_mime_info_cache_dir_reload_default_associations (dir);
 
       return dir;
 }
@@ -128,7 +206,8 @@ gnome_vfs_mime_info_cache_get_search_path (GnomeVFSMimeInfoCache *cache)
 
       i = length - 1;
       while (i >= 0) {
-            args[length - i - 1] = g_build_filename (data_dirs[i], "applications", NULL);
+            args[length - i - 1] = g_build_filename (data_dirs[i],
+                                                     "applications", NULL);
             i--;
       }
       args[length] = NULL;
@@ -152,7 +231,8 @@ gnome_vfs_mime_info_cache_dir_merge_mime_associations (GnomeVFSMimeInfoCacheDir 
 
       for (i = 0; new_desktop_file_ids[i] != NULL; i++) {
             if (!g_list_find (desktop_file_ids, new_desktop_file_ids[i]))
-                  desktop_file_ids = g_list_append (desktop_file_ids, g_strdup (new_desktop_file_ids[i]));
+                  desktop_file_ids = g_list_append (desktop_file_ids,
+                                                    g_strdup (new_desktop_file_ids[i]));
       }
 
       g_hash_table_insert (dir->mime_types_map, g_strdup (mime_type), desktop_file_ids);
@@ -230,9 +310,10 @@ gnome_vfs_mime_get_all_desktop_entries (const char *mime_type)
 
             tmp = list;
             while (tmp != NULL) {
-
-                  if (!g_list_find_custom (desktop_entries, tmp->data, (GCompareFunc) strcmp)) {
-                        desktop_entries = g_list_prepend (desktop_entries, g_strdup (list->data));
+                  if (!g_list_find_custom (desktop_entries, tmp->data,
+                                           (GCompareFunc) strcmp)) {
+                        desktop_entries = g_list_prepend (desktop_entries, 
+                                                          g_strdup (list->data));
                   }
                   tmp = tmp->next;
             }
@@ -247,5 +328,29 @@ gnome_vfs_mime_get_all_desktop_entries (const char *mime_type)
 gchar *
 gnome_vfs_mime_get_default_desktop_entry (const char *mime_type)
 {
+      gchar *desktop_entry;
+      GList *dir_list;
+
+      if (mime_info_cache == NULL) {
+            mime_info_cache = gnome_vfs_mime_info_cache_new (mime_info_cache);
+            gnome_vfs_mime_info_cache_reload (mime_info_cache);
+      }
+
+      dir_list = mime_info_cache->dirs;
+      desktop_entry = NULL;
+      while (dir_list != NULL) {
+            GnomeVFSMimeInfoCacheDir *dir;
+
+            dir = (GnomeVFSMimeInfoCacheDir *) dir_list->data;
+
+            desktop_entry = g_hash_table_lookup (dir->default_mime_types_map,
+                                                 mime_type);
+
+            if (desktop_entry != NULL)
+                  return desktop_entry;
+
+            dir_list = dir_list->next;
+      }
+
       return NULL;
 }
